--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,6 @@
 {
-  "rules": {
-    "@typescript-eslint/naming-convention": "off",
-    "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/explicit-function-return-types": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
-  },
-  "extends": ["plugin:@typescript-eslint/recommended"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-
-  "env": {
-    "node": true
-  }
+    "parser": "@typescript-eslint/parser",
+    "extends": ["plugin:@typescript-eslint/recommended"],
+    "parserOptions": { "ecmaVersion": 2018, "sourceType": "module" },
+    "rules": {}
 }
