--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,28 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "NodeNext",
-    "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
-    "noImplicitAny": true,
-    "moduleResolution": "nodenext",
-    "sourceMap": true
+    "target": "ES6",  
+                                    /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    /* Modules */
+    "module": "commonjs",                       /* Specify how TypeScript looks up a file from a given module specifier. */
+    "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+    "paths": {
+      "@/controller/*" : ["controller/*"],
+      "@/logs/*" : ["logs/*"],
+      "@/middleware/*" : ["middleware/*"],
+      "@/routes/*" : ["routes/*"],
+      "@/service/*" : ["service/*"],
+      "@/utils/*" : ["utils/*"],
+      "@/db/*" : ["db/*"]
+    },                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
+    "outDir": "dist", 
+    "sourceMap": true,                                  /* Specify an output folder for all emitted files. */
+    "esModuleInterop": true,                              /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
+    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+
+    /* Type Checking */
+    "strict": true,                                      /* Enable all strict type-checking options. */
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
 }
