--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.4",
     "module-alias": "^2.2.3",
+    "mongoose": "^7.3.4",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
   },
@@ -52,6 +53,6 @@
     "@/logs": "dist/logs",
     "@/routes": "dist/routes",
     "@/service": "dist/service",
-    "@/db": "dist/db"
+    "@/model": "dist/model"
   }
 }
