--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,13 @@
     "module": "commonjs",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-      "@/controller/*" : ["controller/*"],
       "@/logs/*" : ["logs/*"],
       "@/middleware/*" : ["middleware/*"],
       "@/routes/*" : ["routes/*"],
-      "@/service/*" : ["service/*"],
+      "@/lib/*" : ["lib/*"],
       "@/utils/*" : ["utils/*"],
-      "@/model/*" : ["model/*"]
+      "@/model/*" : ["model/*"],
+      "@/config/*" : ["config/*"]
     },                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
     "outDir": "dist", 
     "sourceMap": true,                                  /* Specify an output folder for all emitted files. */
