--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
   "author": "Ali Akkas",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.4",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^7.3.4",
+    "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.5",
     "@types/node": "^20.2.5",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
@@ -45,14 +51,5 @@
     "hooks": {
       "pre-commit": "yarn lint"
     }
-  },
-  "_moduleAliases": {
-    "@/controller": "dist/controller",
-    "@/utils": "dist/utils",
-    "@/middleware": "dist/middleware",
-    "@/logs": "dist/logs",
-    "@/routes": "dist/routes",
-    "@/service": "dist/service",
-    "@/model": "dist/model"
   }
 }
