--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.4",
@@ -24,6 +25,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
+    "request-ip": "^3.3.0",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
   },
@@ -34,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.2.5",
+    "@types/request-ip": "^0.0.38",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
