--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "request-ip": "^3.3.0",
     "swagger-ui-express": "^5.0.0",
+    "winston": "^3.10.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
