--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "commonjs",
-    // "baseUrl": "./src",
-    // "paths": {
-    // },
-    "outDir": "dist",
+    "baseUrl": "./",
+    "paths": {
+    },
+    "outDir": "./dist",
     "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
