--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ES6",
     "module": "commonjs",
     "baseUrl": "./",
-    "paths": {
-    },
+    // "paths": {
+    // },
     "outDir": "./dist",
     "sourceMap": true,
     "esModuleInterop": true,
