--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DB_CONNECTION_URL='mongodb://<username>:<password>@localhost:27017'
 DB_NAME='example database' 
 ACCESS_TOKEN_SECRET='access-token'
 REFRESH_TOKEN_SECRET='refresh-token'
+CLOUDINARY_CLOUD_NAME='set your cloudinary cloud name'
+CLOUDINARY_API_KEY='set your cloudinary api key'
+CLOUDINARY_API_SECRET='set your cloudinary api secret'
