--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "commonjs",
-    "baseUrl": "./",  
+    // "baseUrl": "./",  
     "outDir": "./dist",
     "sourceMap": true,
     "esModuleInterop": true,
