--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.4",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
     "request-ip": "^3.3.0",
     "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
     "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "winston-elasticsearch": "0.10.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -42,6 +46,7 @@
     "@types/request-ip": "^0.0.38",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.7",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
