--- a/docs/v1/profile/profiles.yaml
+++ b/docs/v1/profile/profiles.yaml
@@ -55,7 +55,7 @@ get:
                           type: string
                           format: email
                           example: ali@gmail.com
-                        profilePic:
+                        avatar:
                           type: string
                           format: url
                           example: 'https://s3.aws.com/my-fitness/img.jpg'
@@ -143,7 +143,7 @@ post:
               type: string
               format: email
               example: akkas@gmail.com
-            profilePic:
+            avatar:
               type: string
               format: url
               example: 'https://s3.aws.com/my-fitness/img.jpg'
