--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ali Akkas",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1501.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -27,6 +28,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "request-ip": "^3.3.0",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
@@ -36,12 +38,14 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.451.0",
     "@types/bcryptjs": "^2.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.2.5",
     "@types/request-ip": "^0.0.38",
     "@types/supertest": "^2.0.12",
