--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.4",
     "express-winston": "^4.2.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^7.3.4",
